y.output
Terminals unused in grammar

    LPAREN
    RPAREN
    UNDERSCORE


State 11 conflicts: 8 shift/reduce
State 59 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: declaracoes

    2 declaracoes: declaracao
    3            | declaracao declaracoes

    4 declaracao: declaracao_variavel
    5           | declaracao_funcao
    6           | declaracao_estrutura

    7 $@1: ε

    8 $@2: ε

    9 $@3: ε

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR $@2 VAI_SER $@3 expressao DOT

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR LBRACE parametros RBRACE COLLON bloco

   12 parametros: parametro
   13           | parametro COMMA parametros

   14 parametro: IDENTIFICADOR

   15 declaracao_estrutura: if
   16                     | while
   17                     | for
   18                     | break
   19                     | print
   20                     | return

   21 if: FRAGA expressao INTERROGACAO bloco END_COMMAND
   22   | FRAGA expressao INTERROGACAO bloco else

   23 else: ε
   24     | NAO INTERROGACAO bloco END_COMMAND
   25     | NAO if

   26 while: VAI_FAZENDO_ATE expressao COLLON bloco

   27 for: PRA LBRACE expressao RBRACE COLLON bloco

   28 break: PICA_MULA

   29 return: ARREDA expressao

   30 expressao: termo
   31          | termo operador expressao

   32 print: ANOTA COLLON expressao

   33 termo: IDENTIFICADOR
   34      | NUMERO
   35      | STRING
   36      | BOOL
   37      | CHAR

   38 operador: AI_CE_JUNTA
   39         | AI_CE_DIMINUI
   40         | CE_MULTIPLICA_POR
   41         | CE_DIVIDE_POR
   42         | ENGUAL
   43         | NADA_A_VER_COM
   44         | MAIOR_QUE
   45         | MENOR_QUE
   46         | OR_OP
   47         | AND_OP
   48         | NOT_OP

   49 bloco: declaracoes


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFICADOR (258) 10 11 14 33
    TIPO (259) 10
    NUMERO (260) 34
    STRING (261) 35
    BOOL (262) 36
    CHAR (263) 37
    VAI_SER (264) 10
    NAQUELE_NAIPE (265) 11
    FRAGA (266) 21 22
    NAO (267) 24 25
    INTERROGACAO (268) 21 22 24
    VAI_FAZENDO_ATE (269) 26
    PRA (270) 27
    PICA_MULA (271) 28
    ARREDA (272) 29
    ANOTA (273) 32
    AI_CE_JUNTA (274) 38
    AI_CE_DIMINUI (275) 39
    CE_MULTIPLICA_POR (276) 40
    CE_DIVIDE_POR (277) 41
    ENGUAL (278) 42
    NADA_A_VER_COM (279) 43
    MAIOR_QUE (280) 44
    MENOR_QUE (281) 45
    LPAREN (282)
    RPAREN (283)
    LBRACE (284) 11 27
    RBRACE (285) 11 27
    COLLON (286) 11 26 27 32
    COMMA (287) 13
    DOT (288) 10
    UNDERSCORE (289)
    OR_OP (290) 46
    AND_OP (291) 47
    NOT_OP (292) 48
    END_COMMAND (293) 21 24


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    programa (40)
        on left: 1
        on right: 0
    declaracoes (41)
        on left: 2 3
        on right: 1 3 49
    declaracao (42)
        on left: 4 5 6
        on right: 2 3
    declaracao_variavel (43)
        on left: 10
        on right: 4
    $@1 (44)
        on left: 7
        on right: 10
    $@2 (45)
        on left: 8
        on right: 10
    $@3 (46)
        on left: 9
        on right: 10
    declaracao_funcao (47)
        on left: 11
        on right: 5
    parametros (48)
        on left: 12 13
        on right: 11 13
    parametro (49)
        on left: 14
        on right: 12 13
    declaracao_estrutura (50)
        on left: 15 16 17 18 19 20
        on right: 6
    if (51)
        on left: 21 22
        on right: 15 25
    else (52)
        on left: 23 24 25
        on right: 22
    while (53)
        on left: 26
        on right: 16
    for (54)
        on left: 27
        on right: 17
    break (55)
        on left: 28
        on right: 18
    return (56)
        on left: 29
        on right: 20
    expressao (57)
        on left: 30 31
        on right: 10 21 22 26 27 29 31 32
    print (58)
        on left: 32
        on right: 19
    termo (59)
        on left: 33 34 35 36 37
        on right: 30 31
    operador (60)
        on left: 38 39 40 41 42 43 44 45 46 47 48
        on right: 31
    bloco (61)
        on left: 49
        on right: 11 21 22 24 26 27


State 0

    0 $accept: • programa $end

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    programa              go to state 9
    declaracoes           go to state 10
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20


State 1

   10 declaracao_variavel: TIPO • $@1 IDENTIFICADOR $@2 VAI_SER $@3 expressao DOT

    $default  reduce using rule 7 ($@1)

    $@1  go to state 21


State 2

   11 declaracao_funcao: NAQUELE_NAIPE • IDENTIFICADOR LBRACE parametros RBRACE COLLON bloco

    IDENTIFICADOR  shift, and go to state 22


State 3

   21 if: FRAGA • expressao INTERROGACAO bloco END_COMMAND
   22   | FRAGA • expressao INTERROGACAO bloco else

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 28
    termo      go to state 29


State 4

   26 while: VAI_FAZENDO_ATE • expressao COLLON bloco

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 30
    termo      go to state 29


State 5

   27 for: PRA • LBRACE expressao RBRACE COLLON bloco

    LBRACE  shift, and go to state 31


State 6

   28 break: PICA_MULA •

    $default  reduce using rule 28 (break)


State 7

   29 return: ARREDA • expressao

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 32
    termo      go to state 29


State 8

   32 print: ANOTA • COLLON expressao

    COLLON  shift, and go to state 33


State 9

    0 $accept: programa • $end

    $end  shift, and go to state 34


State 10

    1 programa: declaracoes •

    $default  reduce using rule 1 (programa)


State 11

    2 declaracoes: declaracao •
    3            | declaracao • declaracoes

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    TIPO             [reduce using rule 2 (declaracoes)]
    NAQUELE_NAIPE    [reduce using rule 2 (declaracoes)]
    FRAGA            [reduce using rule 2 (declaracoes)]
    VAI_FAZENDO_ATE  [reduce using rule 2 (declaracoes)]
    PRA              [reduce using rule 2 (declaracoes)]
    PICA_MULA        [reduce using rule 2 (declaracoes)]
    ARREDA           [reduce using rule 2 (declaracoes)]
    ANOTA            [reduce using rule 2 (declaracoes)]
    $default         reduce using rule 2 (declaracoes)

    declaracoes           go to state 35
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20


State 12

    4 declaracao: declaracao_variavel •

    $default  reduce using rule 4 (declaracao)


State 13

    5 declaracao: declaracao_funcao •

    $default  reduce using rule 5 (declaracao)


State 14

    6 declaracao: declaracao_estrutura •

    $default  reduce using rule 6 (declaracao)


State 15

   15 declaracao_estrutura: if •

    $default  reduce using rule 15 (declaracao_estrutura)


State 16

   16 declaracao_estrutura: while •

    $default  reduce using rule 16 (declaracao_estrutura)


State 17

   17 declaracao_estrutura: for •

    $default  reduce using rule 17 (declaracao_estrutura)


State 18

   18 declaracao_estrutura: break •

    $default  reduce using rule 18 (declaracao_estrutura)


State 19

   20 declaracao_estrutura: return •

    $default  reduce using rule 20 (declaracao_estrutura)


State 20

   19 declaracao_estrutura: print •

    $default  reduce using rule 19 (declaracao_estrutura)


State 21

   10 declaracao_variavel: TIPO $@1 • IDENTIFICADOR $@2 VAI_SER $@3 expressao DOT

    IDENTIFICADOR  shift, and go to state 36


State 22

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR • LBRACE parametros RBRACE COLLON bloco

    LBRACE  shift, and go to state 37


State 23

   33 termo: IDENTIFICADOR •

    $default  reduce using rule 33 (termo)


State 24

   34 termo: NUMERO •

    $default  reduce using rule 34 (termo)


State 25

   35 termo: STRING •

    $default  reduce using rule 35 (termo)


State 26

   36 termo: BOOL •

    $default  reduce using rule 36 (termo)


State 27

   37 termo: CHAR •

    $default  reduce using rule 37 (termo)


State 28

   21 if: FRAGA expressao • INTERROGACAO bloco END_COMMAND
   22   | FRAGA expressao • INTERROGACAO bloco else

    INTERROGACAO  shift, and go to state 38


State 29

   30 expressao: termo •
   31          | termo • operador expressao

    AI_CE_JUNTA        shift, and go to state 39
    AI_CE_DIMINUI      shift, and go to state 40
    CE_MULTIPLICA_POR  shift, and go to state 41
    CE_DIVIDE_POR      shift, and go to state 42
    ENGUAL             shift, and go to state 43
    NADA_A_VER_COM     shift, and go to state 44
    MAIOR_QUE          shift, and go to state 45
    MENOR_QUE          shift, and go to state 46
    OR_OP              shift, and go to state 47
    AND_OP             shift, and go to state 48
    NOT_OP             shift, and go to state 49

    $default  reduce using rule 30 (expressao)

    operador  go to state 50


State 30

   26 while: VAI_FAZENDO_ATE expressao • COLLON bloco

    COLLON  shift, and go to state 51


State 31

   27 for: PRA LBRACE • expressao RBRACE COLLON bloco

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 52
    termo      go to state 29


State 32

   29 return: ARREDA expressao •

    $default  reduce using rule 29 (return)


State 33

   32 print: ANOTA COLLON • expressao

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 53
    termo      go to state 29


State 34

    0 $accept: programa $end •

    $default  accept


State 35

    3 declaracoes: declaracao declaracoes •

    $default  reduce using rule 3 (declaracoes)


State 36

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR • $@2 VAI_SER $@3 expressao DOT

    $default  reduce using rule 8 ($@2)

    $@2  go to state 54


State 37

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR LBRACE • parametros RBRACE COLLON bloco

    IDENTIFICADOR  shift, and go to state 55

    parametros  go to state 56
    parametro   go to state 57


State 38

   21 if: FRAGA expressao INTERROGACAO • bloco END_COMMAND
   22   | FRAGA expressao INTERROGACAO • bloco else

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    declaracoes           go to state 58
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20
    bloco                 go to state 59


State 39

   38 operador: AI_CE_JUNTA •

    $default  reduce using rule 38 (operador)


State 40

   39 operador: AI_CE_DIMINUI •

    $default  reduce using rule 39 (operador)


State 41

   40 operador: CE_MULTIPLICA_POR •

    $default  reduce using rule 40 (operador)


State 42

   41 operador: CE_DIVIDE_POR •

    $default  reduce using rule 41 (operador)


State 43

   42 operador: ENGUAL •

    $default  reduce using rule 42 (operador)


State 44

   43 operador: NADA_A_VER_COM •

    $default  reduce using rule 43 (operador)


State 45

   44 operador: MAIOR_QUE •

    $default  reduce using rule 44 (operador)


State 46

   45 operador: MENOR_QUE •

    $default  reduce using rule 45 (operador)


State 47

   46 operador: OR_OP •

    $default  reduce using rule 46 (operador)


State 48

   47 operador: AND_OP •

    $default  reduce using rule 47 (operador)


State 49

   48 operador: NOT_OP •

    $default  reduce using rule 48 (operador)


State 50

   31 expressao: termo operador • expressao

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 60
    termo      go to state 29


State 51

   26 while: VAI_FAZENDO_ATE expressao COLLON • bloco

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    declaracoes           go to state 58
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20
    bloco                 go to state 61


State 52

   27 for: PRA LBRACE expressao • RBRACE COLLON bloco

    RBRACE  shift, and go to state 62


State 53

   32 print: ANOTA COLLON expressao •

    $default  reduce using rule 32 (print)


State 54

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR $@2 • VAI_SER $@3 expressao DOT

    VAI_SER  shift, and go to state 63


State 55

   14 parametro: IDENTIFICADOR •

    $default  reduce using rule 14 (parametro)


State 56

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR LBRACE parametros • RBRACE COLLON bloco

    RBRACE  shift, and go to state 64


State 57

   12 parametros: parametro •
   13           | parametro • COMMA parametros

    COMMA  shift, and go to state 65

    $default  reduce using rule 12 (parametros)


State 58

   49 bloco: declaracoes •

    $default  reduce using rule 49 (bloco)


State 59

   21 if: FRAGA expressao INTERROGACAO bloco • END_COMMAND
   22   | FRAGA expressao INTERROGACAO bloco • else

    NAO          shift, and go to state 66
    END_COMMAND  shift, and go to state 67

    NAO          [reduce using rule 23 (else)]
    END_COMMAND  [reduce using rule 23 (else)]
    $default     reduce using rule 23 (else)

    else  go to state 68


State 60

   31 expressao: termo operador expressao •

    $default  reduce using rule 31 (expressao)


State 61

   26 while: VAI_FAZENDO_ATE expressao COLLON bloco •

    $default  reduce using rule 26 (while)


State 62

   27 for: PRA LBRACE expressao RBRACE • COLLON bloco

    COLLON  shift, and go to state 69


State 63

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR $@2 VAI_SER • $@3 expressao DOT

    $default  reduce using rule 9 ($@3)

    $@3  go to state 70


State 64

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR LBRACE parametros RBRACE • COLLON bloco

    COLLON  shift, and go to state 71


State 65

   13 parametros: parametro COMMA • parametros

    IDENTIFICADOR  shift, and go to state 55

    parametros  go to state 72
    parametro   go to state 57


State 66

   24 else: NAO • INTERROGACAO bloco END_COMMAND
   25     | NAO • if

    FRAGA         shift, and go to state 3
    INTERROGACAO  shift, and go to state 73

    if  go to state 74


State 67

   21 if: FRAGA expressao INTERROGACAO bloco END_COMMAND •

    $default  reduce using rule 21 (if)


State 68

   22 if: FRAGA expressao INTERROGACAO bloco else •

    $default  reduce using rule 22 (if)


State 69

   27 for: PRA LBRACE expressao RBRACE COLLON • bloco

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    declaracoes           go to state 58
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20
    bloco                 go to state 75


State 70

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR $@2 VAI_SER $@3 • expressao DOT

    IDENTIFICADOR  shift, and go to state 23
    NUMERO         shift, and go to state 24
    STRING         shift, and go to state 25
    BOOL           shift, and go to state 26
    CHAR           shift, and go to state 27

    expressao  go to state 76
    termo      go to state 29


State 71

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR LBRACE parametros RBRACE COLLON • bloco

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    declaracoes           go to state 58
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20
    bloco                 go to state 77


State 72

   13 parametros: parametro COMMA parametros •

    $default  reduce using rule 13 (parametros)


State 73

   24 else: NAO INTERROGACAO • bloco END_COMMAND

    TIPO             shift, and go to state 1
    NAQUELE_NAIPE    shift, and go to state 2
    FRAGA            shift, and go to state 3
    VAI_FAZENDO_ATE  shift, and go to state 4
    PRA              shift, and go to state 5
    PICA_MULA        shift, and go to state 6
    ARREDA           shift, and go to state 7
    ANOTA            shift, and go to state 8

    declaracoes           go to state 58
    declaracao            go to state 11
    declaracao_variavel   go to state 12
    declaracao_funcao     go to state 13
    declaracao_estrutura  go to state 14
    if                    go to state 15
    while                 go to state 16
    for                   go to state 17
    break                 go to state 18
    return                go to state 19
    print                 go to state 20
    bloco                 go to state 78


State 74

   25 else: NAO if •

    $default  reduce using rule 25 (else)


State 75

   27 for: PRA LBRACE expressao RBRACE COLLON bloco •

    $default  reduce using rule 27 (for)


State 76

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR $@2 VAI_SER $@3 expressao • DOT

    DOT  shift, and go to state 79


State 77

   11 declaracao_funcao: NAQUELE_NAIPE IDENTIFICADOR LBRACE parametros RBRACE COLLON bloco •

    $default  reduce using rule 11 (declaracao_funcao)


State 78

   24 else: NAO INTERROGACAO bloco • END_COMMAND

    END_COMMAND  shift, and go to state 80


State 79

   10 declaracao_variavel: TIPO $@1 IDENTIFICADOR $@2 VAI_SER $@3 expressao DOT •

    $default  reduce using rule 10 (declaracao_variavel)


State 80

   24 else: NAO INTERROGACAO bloco END_COMMAND •

    $default  reduce using rule 24 (else)
